# tetromino-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  play.py  pyproject.toml
.omc/state/: agent-replay-d7cc2d05-946f-44eb-9998-c12acf987f69.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
tetris_tui/: __init__.py  app.py  engine.py  sounds.py  state.py  tui.tcss
tetromino_tui/: app.py  music.py  rules.py  screens.py  sounds.py  tiles.py  tui.tcss
