[project]
name = "tetromino-tui"
version = "0.1.0"
description = "Terminal Blocks — clean-room Tetris-family TUI built on Textual"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tetromino_tui"]

[tool.setuptools.package-data]
tetromino_tui = ["tui.tcss"]
